--- a/22_03_14-HTML Personal Site/index.html
+++ b/22_03_14-HTML Personal Site/index.html
@@ -3,13 +3,26 @@
   -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>❤Francisco's Personal Site❤</title> <!-- Titulo de la pestaña -->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>❤Francisco's Personal Site❤</title>
+  <!-- Titulo de la pestaña -->
 </head>
+
 <body>
-    
+  <h1>Francisco Javier Martinez Duran</h1>
+  <p><em>Web Developer<strong> MERN Stack</strong></em></p> <!-- La i/em es para poner cursiva, strong es negrillas -->
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, aliquam!</p>
+  <hr /> <!-- hr=Es una linea -->
+  <h3>Lorem ipsum dolor sit amet.</h3>
+  <ul> <!-- Asi creo una lista -->
+    <li>Lorem.</li> <!-- Asi le voy dando los Puntos en la identacion izquierda -->
+    <li>Lorem, ipsum.</li>
+    <li>Lorem, ipsum dolor.</li>
+  </ul>
 </body>
+
 </html>
