--- a/22_03_14-HTML Personal Site/index.html
+++ b/22_03_14-HTML Personal Site/index.html
@@ -23,6 +23,12 @@
     <li>Lorem, ipsum.</li>
     <li>Lorem, ipsum dolor.</li>
   </ul>
+  <h3>My Hobbies</h3>
+  <ol> <!-- ol=Salen numeros -->
+    <li>Lorem.</li>
+    <li>Lorem, ipsum.</li>
+    <li>Lorem, ipsum dolor.</li>
+  </ol>
 </body>
 
 </html>
