--- a/22_03_14-HTML Personal Site/index.html
+++ b/22_03_14-HTML Personal Site/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+  <img src="xxx/xxx/xxx" alt="xxx"> <!-- Asi puedo importar una imagen desde el proyecto -->
+  <img src="https://media.licdn.com/media/AAYQAQSOAAgAAQAAAAAAAB-zrMZEDXI2T62PSuT6kpB6qg.png" alt="M_P-img"> <!-- Link a una img -->
   <h1>Francisco Javier Martinez Duran</h1>
   <p><em>Web Developer<strong> MERN Stack</strong></em></p> <!-- La i/em es para poner cursiva, strong es negrillas -->
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, aliquam!</p>
