--- a/22_03_14-HTML Personal Site/index.html
+++ b/22_03_14-HTML Personal Site/index.html
@@ -26,19 +26,18 @@
     <li><a href="x.com">Lorem, ipsum dolor.</a></li>
   </ul>
   <h3>Work Experience</h3>
-  <table> <!-- Para crear una tabla, se hace la identacion -->
-    <th> <!-- Para poner una cabecera, osea el titulo -->
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
+  <table border="1"> <!-- Para crear una tabla, se hace la identacion -->
+    <tr> <!-- Esta es la fila de latabla -->
+      <th>Dates</th> <!-- Para poner una cabecera, osea el titulo -->
+      <th>Work</th>
+    </tr>
     </th>
     <tbody>
-      <tr> <!-- Esta es la fila de latabla -->
+      <tr> <!-- Segunda fila, osea hacia abajo -->
         <td>2013-2014</td> <!-- Espacio 1 de la tabla hacia la derecha, en columnas -->
         <td>Lead Developer at Tempo App</td> <!-- Otra columna -->
       </tr>
-      <tr> <!-- Segunda fila, osea hacia abajo -->
+      <tr> <!-- Tercera fila, osea hacia abajo -->
         <td>2010</td>
         <td>Researcher at The Institute Of Cognitive Neurosciences</td>
       </tr>
