--- a/22_03_14-HTML Personal Site/contact.html
+++ b/22_03_14-HTML Personal Site/contact.html
@@ -1,3 +1,6 @@
+<!-- 
+//**_______________________________________________________________________________________________________________________________________________*/
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,5 +13,16 @@
     <h1>My Contact Details</h1>
     <p>Phone Number = 4491110087</p>
     <p>E-Mail = user.streaming.001@gmail.com</p>
+
+    <form class="" action="index.html" method=""post></form>
+    <label>Your Name:</label> <!-- Es una etiqueta, donde puedo escribir algo -->
+    <input type="text" name="" value=""> <!-- Es el espacio del formulario -->
+    <input type="color" name="" value=""> <!-- Se hizo un submit(boton) con centro negro -->
+    <br> <!-- Un espacio hacia abajo -->
+    <!-- <label>Do you want to sign up to the email list?</label> Una etiqueta con este texto -->
+    <!-- <input type="checkbox" name="" value=""> Se hizo un campo que puedo dejar señalado -->
+    <label>Password:</label>
+    <input type="password" name="" value=""> <!-- Es un campo para contraseña, donde no se ve lo que escribes -->
+    <input type="submit" name=""> <!-- Este es el boton -->
 </body>
 </html>
