--- a/22_03_14-HTML Personal Site/index.html
+++ b/22_03_14-HTML Personal Site/index.html
@@ -28,27 +28,78 @@
     <li><a href="x.com">Lorem, ipsum.</a></li>
     <li><a href="x.com">Lorem, ipsum dolor.</a></li>
   </ul>
+  <hr>
   <h3>Work Experience</h3>
-  <table border="1"> <!-- Para crear una tabla, se hace la identacion -->
-    <tr> <!-- Esta es la fila de latabla -->
+  <table cellspacing="10"> <!-- Para crear una tabla, se hace la identacion -->
+    <tr> <!-- Esta es la fila de la tabla -->
       <th>Dates</th> <!-- Para poner una cabecera, osea el titulo -->
       <th>Work</th>
     </tr>
     </th>
     <tbody>
       <tr> <!-- Segunda fila, osea hacia abajo -->
-        <td>2013-2014</td> <!-- Espacio 1 de la tabla hacia la derecha, en columnas -->
-        <td>Lead Developer at Tempo App</td> <!-- Otra columna -->
+        <td>2009-2010</td> <!-- Espacio 1 de la tabla hacia la derecha, en columnas -->
+        <td>Researcher at The Institute Of Cognitive Neurosciences</td> <!-- Otra columna -->
       </tr>
       <tr> <!-- Tercera fila, osea hacia abajo -->
-        <td>2010</td>
-        <td>Researcher at The Institute Of Cognitive Neurosciences</td>
+        <td>2010-2013</td>
+        <td>Lead Developer at Tempo App</td>
       </tr>
+      <td>2013-2015</td>
+      <td>Clinical Doctor at the National Health Service</td>
     </tbody>
   </table>
   <hr>
+  <h3>Skills</h3>
+  <!-- <table>
+    <tr>
+      <td>iOS Development</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>Web Development</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>Photography</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+  </table> -->
+  <table border="1"> <!-- Tabla con bordes -->
+    <tr> <!--  -->
+      <td>
+        <table cellspacing="10">
+          <tr>
+            <td>iOS Development</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
+          </tr>
+          <tr>
+            <td>Web Development</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table cellspacing="10">
+          <tr>
+            <td>Photography</td>
+            <td>⭐️⭐️</td>
+          </tr>
+          <tr>
+            <td>Painting</td>
+            <td>⭐️</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+  <hr>
   <a href="./hobbies.html">My Hobbies</a> <!-- Asi me redirige a otra pagina -->
-  <a href="./contact.html">Contact Me</a> <!-- Asi me redirige a otra pagina -->
+  -
+  <a href="./contact.html">Contact Me</a>
+  -
+  <a href="./inputs.html">Inputs Exercises</a>
+  -
 </body>
 
 </html>
