--- a/22_03_14-HTML Personal Site/index.html
+++ b/22_03_14-HTML Personal Site/index.html
@@ -13,35 +13,45 @@
 </head>
 
 <body>
-  <table cellspacing="20"> <!-- Creo una tabla, cellspacing=Es como el padding(Centra la imagen) -->
-    <tr> <!-- Es hacia la dereha en Columnas -->
+  <table cellspacing="20">
+    <!-- Creo una tabla, cellspacing=Es como el padding(Centra la imagen) -->
+    <tr>
+      <!-- Es hacia la dereha en Columnas -->
       <td><img src="./img/me.jpeg" alt="M_P-img"></td> <!-- Primer Espacio -->
-      <td><h1>Francisco Javier Martinez Duran</h1> <!-- Segundo espacio, hasta terminar td -->
-        <p><em>Web Developer <strong><a href="x.com"> MERN Stack</strong></em></a></p> <!-- i/em=cursiva, strong=negrillas, href=vinculo -->
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, aliquam!</p></td>
+      <td>
+        <h1>Francisco Javier Martinez Duran</h1> <!-- Segundo espacio, hasta terminar td -->
+        <p><em>Web Developer <strong><a href="x.com"> MERN Stack</strong></em></a></p>
+        <!-- i/em=cursiva, strong=negrillas, href=vinculo -->
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, aliquam!</p>
+      </td>
     </tr>
   </table>
   <hr /> <!-- hr=Es una linea -->
   <h3>Education.</h3>
-  <ul> <!-- Asi creo una lista -->
+  <ul>
+    <!-- Asi creo una lista -->
     <li><a href="x.com">Lorem.</a></li> <!-- Asi le voy dando los Puntos en la identacion izquierda -->
     <li><a href="x.com">Lorem, ipsum.</a></li>
     <li><a href="x.com">Lorem, ipsum dolor.</a></li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
-  <table cellspacing="10"> <!-- Para crear una tabla, se hace la identacion -->
-    <tr> <!-- Esta es la fila de la tabla -->
+  <table cellspacing="10">
+    <!-- Para crear una tabla, se hace la identacion -->
+    <tr>
+      <!-- Esta es la fila de la tabla -->
       <th>Dates</th> <!-- Para poner una cabecera, osea el titulo -->
       <th>Work</th>
     </tr>
     </th>
     <tbody>
-      <tr> <!-- Segunda fila, osea hacia abajo -->
+      <tr>
+        <!-- Segunda fila, osea hacia abajo -->
         <td>2009-2010</td> <!-- Espacio 1 de la tabla hacia la derecha, en columnas -->
         <td>Researcher at The Institute Of Cognitive Neurosciences</td> <!-- Otra columna -->
       </tr>
-      <tr> <!-- Tercera fila, osea hacia abajo -->
+      <tr>
+        <!-- Tercera fila, osea hacia abajo -->
         <td>2010-2013</td>
         <td>Lead Developer at Tempo App</td>
       </tr>
@@ -65,8 +75,10 @@
       <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
   </table> -->
-  <table border="1"> <!-- Tabla con bordes -->
-    <tr> <!--  -->
+  <table border="1">
+    <!-- Tabla con bordes -->
+    <tr>
+      <!--  -->
       <td>
         <table cellspacing="10">
           <tr>
@@ -100,6 +112,19 @@
   -
   <a href="./inputs.html">Inputs Exercises</a>
   -
+
+  <!-- Ejercicio Solucionado -->
+  <h1>HTML Challenge</h1>
+  <table>
+    <tr>
+      <td>
+        <hr />
+      </td>
+    </tr>
+    <tr>
+      <td><a href="https://developer.mozilla.org/es/">Link to MDN Documentation</a></td>
+    </tr>
+  </table>
 </body>
 
 </html>
