--- a/22_03_14-HTML Personal Site/hobbies.html
+++ b/22_03_14-HTML Personal Site/hobbies.html
@@ -9,9 +9,9 @@
 <body>
     <h3>My Hobbies</h3>
     <ol> <!-- ol=Salen numeros -->
-        <li><a href="x.com">Lorem.</a></li>
-        <li><a href="x.com">Lorem, ipsum.</a></li>
-        <li><a href="x.com">Lorem, ipsum dolor.</a></li>
+        <li><a href="https://www.sportsworld.com.mx/">Gym.</a></li>
+        <li><a href="https://www.udemy.com/">Programing.</a></li>
+        <li><a href="https://es.duolingo.com/">Studying Languages.</a></li>
     </ol>
 </body>
 </html>
