--- a/22_03_14-HTML Personal Site/index.html
+++ b/22_03_14-HTML Personal Site/index.html
@@ -12,7 +12,7 @@
   <!-- Titulo de la pestaña -->
 </head>
 
-<body>
+<body style="background-color: #EAF6F6;">
   <table cellspacing="20">
     <!-- Creo una tabla, cellspacing=Es como el padding(Centra la imagen) -->
     <tr>
@@ -22,7 +22,7 @@
         <h1>Francisco Javier Martinez Duran</h1> <!-- Segundo espacio, hasta terminar td -->
         <p><em>Web Developer <strong><a href="x.com"> MERN Stack</strong></em></a></p>
         <!-- i/em=cursiva, strong=negrillas, href=vinculo -->
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, aliquam!</p>
+        <p>Mern Full Stack Developer</p>
       </td>
     </tr>
   </table>
@@ -30,9 +30,9 @@
   <h3>Education.</h3>
   <ul>
     <!-- Asi creo una lista -->
-    <li><a href="x.com">Lorem.</a></li> <!-- Asi le voy dando los Puntos en la identacion izquierda -->
-    <li><a href="x.com">Lorem, ipsum.</a></li>
-    <li><a href="x.com">Lorem, ipsum dolor.</a></li>
+    <li><a href="https://unidep.mx/">Unidep - Ing. Sistemas Computacionales</a></li> <!-- Asi le voy dando los Puntos en la identacion izquierda -->
+    <li><a href="https://uvm.mx/">UVM- Ing. Industrial y de Sistemas</a></li>
+    <li><a href="https://codellege.com/">Softtek - Codellege</a></li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
@@ -47,16 +47,16 @@
     <tbody>
       <tr>
         <!-- Segunda fila, osea hacia abajo -->
-        <td>2009-2010</td> <!-- Espacio 1 de la tabla hacia la derecha, en columnas -->
-        <td>Researcher at The Institute Of Cognitive Neurosciences</td> <!-- Otra columna -->
+        <td>2010-2013</td> <!-- Espacio 1 de la tabla hacia la derecha, en columnas -->
+        <td>Plaza de la Tecnologia Aguascalientes</td> <!-- Otra columna -->
       </tr>
       <tr>
         <!-- Tercera fila, osea hacia abajo -->
-        <td>2010-2013</td>
-        <td>Lead Developer at Tempo App</td>
+        <td>2013-2014</td>
+        <td>LEc Aguascalientes (Language Educational Center)</td>
       </tr>
-      <td>2013-2015</td>
-      <td>Clinical Doctor at the National Health Service</td>
+      <td>2014-2022</td>
+      <td>Freelance Worker - Full Stack Developer</td>
     </tbody>
   </table>
   <hr>
@@ -83,11 +83,11 @@
         <table cellspacing="10">
           <tr>
             <td>iOS Development</td>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
+            <td>⭐️</td>
           </tr>
           <tr>
             <td>Web Development</td>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
+            <td>⭐️⭐️⭐️</td>
           </tr>
         </table>
       </td>
