Link to CSS and Challenge Solved

--- a/22_03_14-HTML Personal Site/index.html
+++ b/22_03_14-HTML Personal Site/index.html
@@ -9,28 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>❤Francisco's Personal Site❤</title><!-- Titulo de la pestaña -->
-
-  <style>
-
-    body{
-      background-color: #EAF6F6; /* Color suave al background */
-    }
-
-    hr{
-      /* background-color: gray; /* Linea gris */
-      border-style: none; /* Son los bordes, pero son los 4, definimos individualmente, o los configuramos manualmente */
-      border-top-style: dotted; /* Definimos el margen superior, y asi quedo */
-      /* height: 2px; /* La altura */
-      border-color: gray; /* Cambiamos el color del borde a gris */
-      border-width: 5px; /* La anchura de los bordes */
-      width: 2.5%; /* Recortamos el ancho */
-    }
-
-    /* img{ Para recorle tamaño a la imagen */
-      /* height: 20px; */
-    /* } */
-
-  </style>
+  <link rel="stylesheet" href="./css/styles.css"> <!-- Link to CSS -->
 </head>
 
 <body>
