Challenges Solved and Updated Code

--- a/22_03_14-HTML Personal Site/index.html
+++ b/22_03_14-HTML Personal Site/index.html
@@ -1,130 +1,130 @@
-<!--
+<!-- 
 //**_______________________________________________________________________________________________________________________________________________*/
   -->
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>❤Francisco's Personal Site❤</title><!-- Titulo de la pestaña -->
-  <link rel="stylesheet" href="./css/styles.css"> <!-- Link to CSS -->
-</head>
-
-<body>
-  <table cellspacing="20">
-    <!-- Creo una tabla, cellspacing=Es como el padding(Centra la imagen) -->
-    <tr>
-      <!-- Es hacia la dereha en Columnas -->
-      <td><img src="./img/me.jpeg" alt="M_P-img"></td> <!-- Primer Espacio -->
-      <td>
-        <h1>Francisco Javier Martinez Duran</h1> <!-- Segundo espacio, hasta terminar td -->
-        <p><em>Web Developer <strong><a href="x.com"> MERN Stack</strong></em></a></p>
-        <!-- i/em=cursiva, strong=negrillas, href=vinculo -->
-        <p>Mern Full Stack Developer</p>
-      </td>
-    </tr>
-  </table>
-  <hr /> <!-- hr=Es una linea -->
-  <h3>Education.</h3>
-  <ul>
-    <!-- Asi creo una lista -->
-    <li><a href="https://unidep.mx/">Unidep - Ing. Sistemas Computacionales</a></li> <!-- Asi le voy dando los Puntos en la identacion izquierda -->
-    <li><a href="https://uvm.mx/">UVM- Ing. Industrial y de Sistemas</a></li>
-    <li><a href="https://codellege.com/">Softtek - Codellege</a></li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <!-- Para crear una tabla, se hace la identacion -->
-    <tr>
-      <!-- Esta es la fila de la tabla -->
-      <th>Dates</th> <!-- Para poner una cabecera, osea el titulo -->
-      <th>Work</th>
-    </tr>
-    </th>
-    <tbody>
+  <!DOCTYPE html>
+  <html lang="en">
+  
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>❤Francisco's Personal Site❤</title><!-- Titulo de la pestaña -->
+    <link rel="stylesheet" href="./css/styles.css"> <!-- Link to CSS -->
+  </head>
+  
+  <body>
+    <table cellspacing="20">
+      <!-- Creo una tabla, cellspacing=Es como el padding(Centra la imagen) -->
       <tr>
-        <!-- Segunda fila, osea hacia abajo -->
-        <td>2010-2013</td> <!-- Espacio 1 de la tabla hacia la derecha, en columnas -->
-        <td>Plaza de la Tecnologia Aguascalientes</td> <!-- Otra columna -->
+        <!-- Es hacia la dereha en Columnas -->
+        <td><img src="./img/me.jpeg" alt="M_P-img"></td> <!-- Primer Espacio -->
+        <td>
+          <h1>Francisco Javier Martinez Duran</h1> <!-- Segundo espacio, hasta terminar td -->
+          <p><em>Web Developer <strong><a href="x.com"> MERN Stack</strong></em></a></p>
+          <!-- i/em=cursiva, strong=negrillas, href=vinculo -->
+          <p>Mern Full Stack Developer</p>
+        </td>
+      </tr>
+    </table>
+    <hr /> <!-- hr=Es una linea -->
+    <h3>Education.</h3>
+    <ul>
+      <!-- Asi creo una lista -->
+      <li><a href="https://unidep.mx/">Unidep - Ing. Sistemas Computacionales</a></li> <!-- Asi le voy dando los Puntos en la identacion izquierda -->
+      <li><a href="https://uvm.mx/">UVM- Ing. Industrial y de Sistemas</a></li>
+      <li><a href="https://codellege.com/">Softtek - Codellege</a></li>
+    </ul>
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <!-- Para crear una tabla, se hace la identacion -->
+      <tr>
+        <!-- Esta es la fila de la tabla -->
+        <th>Dates</th> <!-- Para poner una cabecera, osea el titulo -->
+        <th>Work</th>
+      </tr>
+      </th>
+      <tbody>
+        <tr>
+          <!-- Segunda fila, osea hacia abajo -->
+          <td>2010-2013</td> <!-- Espacio 1 de la tabla hacia la derecha, en columnas -->
+          <td>Plaza de la Tecnologia Aguascalientes</td> <!-- Otra columna -->
+        </tr>
+        <tr>
+          <!-- Tercera fila, osea hacia abajo -->
+          <td>2013-2014</td>
+          <td>LEC Aguascalientes (Language Educational Center)</td>
+        </tr>
+        <td>2014-2022</td>
+        <td>Freelance Worker - Full Stack Developer</td>
+      </tbody>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <!-- <table>
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <!-- Tercera fila, osea hacia abajo -->
-        <td>2013-2014</td>
-        <td>LEc Aguascalientes (Language Educational Center)</td>
+        <td>Web Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
-      <td>2014-2022</td>
-      <td>Freelance Worker - Full Stack Developer</td>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <!-- <table>
-    <tr>
-      <td>iOS Development</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Web Development</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Photography</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-  </table> -->
-  <table border="1">
-    <!-- Tabla con bordes -->
-    <tr>
-      <!--  -->
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>iOS Development</td>
-            <td>⭐️</td>
-          </tr>
-          <tr>
-            <td>Web Development</td>
-            <td>⭐️⭐️⭐️</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Photography</td>
-            <td>⭐️⭐️</td>
-          </tr>
-          <tr>
-            <td>Painting</td>
-            <td>⭐️</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <a href="./hobbies.html">My Hobbies</a> <!-- Asi me redirige a otra pagina -->
-  -
-  <a href="./contact.html">Contact Me</a>
-  -
-  <a href="./inputs.html">Inputs Exercises</a>
-  -
-
-  <!-- Ejercicio Solucionado -->
-  <h1>HTML Challenge</h1>
-  <table>
-    <tr>
-      <td>
-        <hr />
-      </td>
-    </tr>
-    <tr>
-      <td><a href="https://developer.mozilla.org/es/">Link to MDN Documentation</a></td>
-    </tr>
-  </table>
-</body>
-
-</html>
+      <tr>
+        <td>Photography</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+    </table> -->
+    <table border="1">
+      <!-- Tabla con bordes -->
+      <tr>
+        <!--  -->
+        <td>
+          <table cellspacing="10">
+            <tr>
+              <td>iOS Development</td>
+              <td>⭐️</td>
+            </tr>
+            <tr>
+              <td>Web Development</td>
+              <td>⭐️⭐️⭐️</td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <table cellspacing="10">
+            <tr>
+              <td>Photography</td>
+              <td>⭐️⭐️</td>
+            </tr>
+            <tr>
+              <td>Painting</td>
+              <td>⭐️</td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+    <hr>
+    <a href="./hobbies.html">My Hobbies</a> <!-- Asi me redirige a otra pagina -->
+    -
+    <a href="./contact.html">Contact Me</a>
+    -
+    <a href="./inputs.html">Inputs Exercises</a>
+    -
+  
+    <!-- Ejercicio Solucionado -->
+    <h1>HTML Challenge</h1>
+    <table>
+      <tr>
+        <td>
+          <hr />
+        </td>
+      </tr>
+      <tr>
+        <td><a href="https://developer.mozilla.org/es/">Link to MDN Documentation</a></td>
+      </tr>
+    </table>
+  </body>
+  
+  </html>
