--- a/22_03_24-CSS-Bacon Fansite/index.html
+++ b/22_03_24-CSS-Bacon Fansite/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-  <h1>I Love Bacon</h1>
+  <h1 id="heading">I Love Bacon</h1> <!-- Solo puedo ingresar un id -->
   <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
   <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
   <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-  <!-- emojipedia(nice imgs), copy imagen url -->
+  <!-- emojipedia(nice imgs), copy imagen url, puedo ingresar muchas clases -->
   <img class="bacon" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/bacon_1f953.png" alt="bacon-img">
-  <img class="broccoli" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/broccoli_1f966.png" alt="broccoli-img">
+  <img class="broccoli circular" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/broccoli_1f966.png" alt="broccoli-img">
 </body>
 
 </html>
