Playing with Margins

--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -12,6 +12,9 @@
     <link rel="icon" href="./favicon.ico?v=2"> <!-- https://www.favicon.cc/=Puedo personal los favicon -->
 </head>
 <body>
-    
+    <div class="">
+        <h1>I'm Frank.</h1>
+        <p>MERN Full Stack.</p>
+    </div>
 </body>
 </html>
