--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -12,9 +12,11 @@
     <link rel="icon" href="./favicon.ico?v=2"> <!-- https://www.favicon.cc/=Puedo personal los favicon -->
 </head>
 <body>
-    <div class="">
+    <div class="top-container">
         <h1>I'm Frank.</h1>
         <p>MERN Full Stack.</p>
     </div>
+    <div class="middle-container"></div>
+    <div class="bottom-container"></div>
 </body>
 </html>
