--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -13,8 +13,11 @@
 </head>
 <body>
     <div class="top-container">
+        <img src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
         <h1>I'm Frank.</h1>
-        <p>MERN Full Stack.</p>
+        <p>MERN <span class="pro">Full</span> Stack.</p>
+        <img src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
+        <img src="./images//mountain.png" alt="mountain-img"> -<!-- La imagen de la montaña -->
     </div>
     <div class="middle-container"></div>
     <div class="bottom-container"></div>
