--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -12,13 +12,8 @@
     <link rel="icon" href="./favicon.ico?v=2"> <!-- https://www.favicon.cc/=Puedo personal los favicon -->
 </head>
 <body>
-    <div class="top-container">
-        <img src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
-        <h1>I'm Frank.</h1>
-        <p>MERN <span class="pro">Full</span> Stack.</p>
-        <img src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
-        <img src="./images//mountain.png" alt="mountain-img"> -<!-- La imagen de la montaña -->
-    </div>
+
+    <div class="top-container-1"></div>
     <div class="middle-container"></div>
     <div class="bottom-container"></div>
 </body>
