--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -1,6 +1,7 @@
 <!-- 
 //**_______________________________________________________________________________________________________________________________________________*/
 -->
+<!-- Recuerda, cuando pongamos copiemos nombres, confirmar en que clases estan ocupados -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,9 +13,12 @@
     <link rel="icon" href="./favicon.ico?v=2"> <!-- https://www.favicon.cc/=Puedo personal los favicon -->
 </head>
 <body>
-    <div class="container">
-        <div class="top-container-1">
-        </div>
+    <div class="top-container">
+        <img class="top-cloud" src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
+        <h1>I'm Frank.</h1>
+        <p>MERN <span class="pro">Full</span> Stack.</p>
+        <img class="bottom-cloud" src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
+        <img src="./images//mountain.png" alt="mountain-img"> -<!-- La imagen de la montaña -->
     </div>
     <div class="middle-container"></div>
     <div class="bottom-container"></div>
