--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -11,10 +11,15 @@
     <title>Frank Site</title>
     <link rel="stylesheet" href="./css//styles.css">
     <link rel="icon" href="./favicon.ico?v=2"> <!-- https://www.favicon.cc/=Puedo personal los favicon -->
+    <!-- <style>@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Sacramento&display=swap');</style> Importar lera -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Esta es si copio el link, es mas limpio (las 3) -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="top-container">
         <img class="top-cloud" src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
+        <!-- <h1 id="title">I'm Frank.</h1>  <!-- Lo hice para una prueba de tipografia de letra -->
         <h1>I'm Frank.</h1>
         <p>MERN <span class="pro">Full</span> Stack.</p>
         <img class="bottom-cloud" src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
