--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -25,7 +25,39 @@
         <img class="bottom-cloud" src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
         <img src="./images//mountain.png" alt="mountain-img"> -<!-- La imagen de la montaña -->
     </div>
-    <div class="middle-container"></div>
-    <div class="bottom-container"></div>
+    <div class="middle-container">
+        <div class="profile">
+          <img id="profile_img" src="./images/me.jpeg" alt="me">
+          <h2>Hello.</h2>
+          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        </div>
+        <hr>
+        <div class="skills">
+          <h2>My Skills.</h2>
+          <div class="skill-row">
+            <img class="" src="./images/MERN-stack.png" alt="mern">
+            <h3>Lorem & Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          </div>
+          <div class="skill-row">
+            <img class="" src="./images/logo-html5-js-css3-png-transparent-logo-4.png" alt="js">
+            <h3>Lorem Ipsum Dolor</h3>
+            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+          <h2>Get In Touch</h2>
+          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <a class="btn" href="mailto:user.streaming.001@gmail.com">CONTACT ME</a>
+        </div>
+      </div>
+      <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© Francisco Javier Martinez Duran.</p>
+      </div>
 </body>
 </html>
