--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -21,9 +21,9 @@
         <img class="top-cloud" src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
         <!-- <h1 id="title">I'm Frank.</h1>  <!-- Lo hice para una prueba de tipografia de letra -->
         <h1>I'm Frank.</h1>
-        <p>MERN <span class="pro">Full</span> Stack.</p>
+        <h2>MERN <span class="pro">Full</span> Stack.</h2>
         <img class="bottom-cloud" src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
-        <img src="./images//mountain.png" alt="mountain-img"> -<!-- La imagen de la montaña -->
+        <img src="./images//mountain.png" alt="mountain-img"> <!-- La imagen de la montaña -->
     </div>
     <div class="middle-container">
         <div class="profile">
@@ -40,7 +40,7 @@
             <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
           </div>
           <div class="skill-row">
-            <img class="" src="./images/logo-html5-js-css3-png-transparent-logo-4.png" alt="js">
+            <img class="" src="https://media.giphy.com/media/QssGEmpkyEOhBCb7e1/giphy.gif" alt="js">
             <h3>Lorem Ipsum Dolor</h3>
             <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
           </div>
