--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -17,47 +17,56 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="top-container">
-        <img class="top-cloud" src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
-        <!-- <h1 id="title">I'm Frank.</h1>  <!-- Lo hice para una prueba de tipografia de letra -->
-        <h1>I'm Frank.</h1>
-        <h2>MERN <span class="pro">Full</span> Stack.</h2>
-        <img class="bottom-cloud" src="./images/cloud.png" alt="cloud-img"> <!-- Imagen de la nube -->
-        <img src="./images//mountain.png" alt="mountain-img"> <!-- La imagen de la montaña -->
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
+    <div class="title-text">
+      <h1>I'm Angela.</h1>
+      <h2>a <span class="pro">pro</span>grammer.</h2>
     </div>
-    <div class="middle-container">
-        <div class="profile">
-          <img id="profile_img" src="./images/me.jpeg" alt="me">
-          <h2>Hello.</h2>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
-        </div>
-        <hr>
-        <div class="skills">
-          <h2>My Skills.</h2>
-          <div class="skill-row">
-            <img class="" src="./images/MERN-stack.png" alt="mern">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
-          </div>
-          <div class="skill-row">
-            <img class="" src="https://media.giphy.com/media/QssGEmpkyEOhBCb7e1/giphy.gif" alt="js">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
-          </div>
-        </div>
-        <hr>
-        <div class="contact-me">
-          <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-          <a class="btn" href="mailto:user.streaming.001@gmail.com">CONTACT ME</a>
-        </div>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/angela.png" alt="angela-profile-img">
+      <h2>Hello.</h2>
+      <p class="intro">I am an iOS and Web Developer. I'm the founder and CTO of The App Brewery. I ❤️ coffee and brew my own beers.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="code-img" src="images/chillies.png" alt="code-img">
+
+        <h3>Design & Development</h3>
+        <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
+
       </div>
-      <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© Francisco Javier Martinez Duran.</p>
+      <div class="skill-row">
+        <img class="chilli-img" src="images/chillies.png" alt="chillies-img">
+
+        <h3>Hot Wings Challenge</h3>
+        <p >But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
+
       </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you love hot wings as much as I do.</h3>
+      <p class="contact-message">Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
+      <a class="btn" href="mailto:ilove@hotwings.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/angela-yu-963a584b/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/yu_angela">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copyright">© 2018 Angela Yu @ The App Brewery.</p>
+  </div>
 </body>
+
 </html>
