--- a/22_03_25-My Site/index.html
+++ b/22_03_25-My Site/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frank Site</title>
+    <title>Simple Site</title>
     <link rel="stylesheet" href="./css//styles.css">
     <link rel="icon" href="./favicon.ico?v=2"> <!-- https://www.favicon.cc/=Puedo personal los favicon -->
     <!-- <style>@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Sacramento&display=swap');</style> Importar lera -->
