--- a/22_04_01-Bootstrap Instalation/index.html
+++ b/22_04_01-Bootstrap Instalation/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +20,7 @@
     <section id="title">
 
         <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,15 +42,16 @@
         </nav>
 
         <!-- Title -->
-
-        <div>
+        <div class="row">
+        <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
             <button type="button">Download</button>
             <button type="button">Download</button>
         </div>
-        <div>
+        <div class="col-lg-6 col-md-12 col-sm-12">
             <img src="images/iphone6.png" alt="iphone-mockup">
         </div>
+    </div>
 
     </section>
 
