--- a/22_04_01-Bootstrap Instalation/index.html
+++ b/22_04_01-Bootstrap Instalation/index.html
@@ -30,7 +30,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <a class="navbar-brand" href="">Tindog</a>
+                    <a class="navbar-brand" href="">tindog</a>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="">Contact</a>
@@ -49,11 +49,13 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h1>Meet new and interesting dogs nearby.</h1>
-                    <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
-                    <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i> Download</button>
+                    <button type="button" class="btn btn-dark btn-lg download-button">
+                        <i class="fa-brands fa-apple"></i> Download</button>
+                    <button type="button" class="btn btn-outline-light btn-lg download-button">
+                        <i class="fa-brands fa-google-play"></i> Download</button>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img src="images/iphone6.png" alt="iphone-mockup">
+                    <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
                 </div>
             </div>
         </div>
