--- a/22_04_01-Bootstrap Instalation/index.html
+++ b/22_04_01-Bootstrap Instalation/index.html
@@ -9,7 +9,7 @@
     <title>TinDog</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
@@ -62,22 +62,31 @@
 
     </section>
 
-
     <!-- Features -->
 
     <section id="features">
 
-        <h3>Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
+        <div class="row">
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-circle-check fa-4x"></i>
+                <h3>Easy to use.</h3>
+                <p>So easy to use, even your dog could do it.</p>
+            </div>
 
-        <h3>Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-bullseye fa-4x"></i>
+                <h3>Elite Clientele</h3>
+                <p>We have all the dogs, the greatest dogs.</p>
+            </div>
 
-        <h3>Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-heart fa-4x"></i>
+                <h3>Guaranteed to work.</h3>
+                <p>Find the love of your dog's life or your money back.</p>
+            </div>
+        </div>
 
     </section>
-
 
     <!-- Testimonials -->
 
