--- a/22_04_01-Bootstrap Instalation/index.html
+++ b/22_04_01-Bootstrap Instalation/index.html
@@ -201,9 +201,11 @@
 
     <section id="cta">
 
-        <h3>Find the True Love of Your Dog's Life Today.</h3>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
+        <h3 id="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+        <button class="btn cta-btn btn-dark btn-lg download-button" type="button">
+            <i class="fa-brands fa-apple"></i> Download</button>
+        <button class="btn cta-btn btn-outline-light btn-lg download-button" type="button">
+            <i class="fa-brands fa-google-play"></i> Download</button>
 
     </section>
 
@@ -211,8 +213,11 @@
 
     <footer id="footer">
 
+        <i class="fa-brands fa-twitter fa-footer"></i>
+        <i class="fa-brands fa-facebook-f fa-footer"></i>
+        <i class="fa-brands fa-instagram fa-footer"></i>
+        <i class="fa-solid fa-envelope fa-footer"></i>
         <p>© Copyright TinDog</p>
-
     </footer>
 
 </body>
