--- a/22_04_01-Bootstrap Instalation/index.html
+++ b/22_04_01-Bootstrap Instalation/index.html
@@ -41,13 +41,13 @@
                     <a class="navbar-brand" href="">tindog</a>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="">Contact</a>
+                            <a class="nav-link" href="#footer">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Pricing</a>
+                            <a class="nav-link" href="#pricing">Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Download</a>
+                            <a class="nav-link" href="#cta">Download</a>
                         </li>
                     </ul>
                 </div>
@@ -201,10 +201,10 @@
 
     <section id="cta">
 
-        <h3 id="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+        <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
         <button class="btn cta-btn btn-dark btn-lg download-button" type="button">
             <i class="fa-brands fa-apple"></i> Download</button>
-        <button class="btn cta-btn btn-outline-light btn-lg download-button" type="button">
+        <button class="btn cta-btn btn-light btn-lg download-button" type="button">
             <i class="fa-brands fa-google-play"></i> Download</button>
 
     </section>
