--- a/22_04_08-Scripts/index.html
+++ b/22_04_08-Scripts/index.html
@@ -17,6 +17,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 </head>
 <body>
     <h1>Scripts</h1>
-    <script src="./length.js"></script>
+    <!-- <script src="./length.js"></script> -->
+    <script src="./slice.js"></script>
 </body>
 </html>
