--- a/22_04_08-Scripts/index.html
+++ b/22_04_08-Scripts/index.html
@@ -18,6 +18,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 <body>
     <h1>Scripts</h1>
     <!-- <script src="./length.js"></script> -->
-    <script src="./slice.js"></script>
+    <!-- <script src="./slice.js"></script> -->
+    <script src="./toUpperCase.js"></script>
 </body>
 </html>
