--- a/22_04_08-Scripts/index.html
+++ b/22_04_08-Scripts/index.html
@@ -21,6 +21,6 @@
     <!-- <script src="./slice.js"></script> -->
     <!-- <script src="./toUpperCase.js"></script> -->
     <!-- <script src="./numbers.js"></script> -->
-    <!-- <script src=""></script> -->
+    <!-- <script src="./function.js"></script> -->
 </body>
 </html>
