--- a/22_04_08-Scripts/index.html
+++ b/22_04_08-Scripts/index.html
@@ -17,6 +17,10 @@
 </head>
 <body>
     <h1>Scripts</h1>
+
+    <ul id="fib">
+    </ul>
+
     <!-- <script src="./length.js"></script> -->
     <!-- <script src="./slice.js"></script> -->
     <!-- <script src="./toUpperCase.js"></script> -->
