--- a/22_04_26-DOM/index.html
+++ b/22_04_26-DOM/index.html
@@ -1,3 +1,6 @@
+<!-- 
+//**_______________________________________________________________________________________________________________________________________________*/
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +12,18 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <input type="checkbox">
+    <button style:active color:red>Click Me</button>
+
+    <ul>
+        <li class="list">
+            <a href="https://www.google.com">Google</a>
+        </li>
+        <li class="list">Second</li>
+        <li class="list">Third</li> <!-- Crear una variable con la ruta, solicito info de la variable, con innerHTML le cambio el nombre -->
+        <!-- let tercero = document.firstElementChild.lastElementChild.children[3].children[2] -->
+    </ul>
+
     <script src="./index.js"></script>
 </body>
 </html>
