--- a/22_04_26-DOM/index.html
+++ b/22_04_26-DOM/index.html
@@ -16,7 +16,7 @@
     <h1>Hello</h1>
     <a href="https://www.google.com">Google</a>
     <input type="checkbox">
-    <button style:active color:red>Click Me</button>
+    <button class="btn">Click Me</button> <!-- document.querySelector("button").style.backgroundColor = "yellow" (Cambiar background amarillo) -->
     <ul>
         <li class="list">
             <a href="https://www.google.com">Google</a> <!-- document.querySelector("li a").style.color = "red" (Cambio su color a rojo) -->
