--- a/22_04_26-DOM/index.html
+++ b/22_04_26-DOM/index.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <h1 id="title"><strong>Hello</strong></h1>
+    <!-- document.querySelector("h1").style.fontSize = "10rem" (Le camvio el tamaño a texto) -->
+    <!-- document.querySelector("h1").classList.add("invisible") (Le agrege la clase invisible, en css la puse visibility; hidden) -->
+    <!-- document.querySelector("h1").classList.toggle("invisible") (Para que aparezca y desaparezca) -->
     <a href="https://www.google.com">Google</a>
     <input type="checkbox">
     <button class="btn">Click Me</button> <!-- document.querySelector("button").style.backgroundColor = "yellow" (Cambiar background amarillo) -->
