--- a/22_05_01-Dicee Game/index.html
+++ b/22_05_01-Dicee Game/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     
-    <div class="container">
+    <div class="container"> <!-- Se crea esta clase y la definimos en los estilos -->
       <h1>Inicia</h1>
       
-      <div class="dice">
+      <div class="dice"> <!-- Igual, todo esto esta definido en los estilos -->
         <p>Jugador 1</p>
         <img class="img1" src=""/>
       </div>
@@ -31,6 +31,6 @@
   </body>
 
   <footer>
-    <p>Juego de Dados</p>
+    <div>🎲Juego de Dados🎲 by Francisco👨🏼‍💻</div>    
   </footer>
 </html>
