--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -1,3 +1,6 @@
+<!-- 
+//**_______________________________________________________________________________________________________________________________________________*/
+ -->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -21,9 +24,9 @@
     <button class="l drum">l</button>
   </div>
 
-
+  <script src="./index.js"></script>
   <footer>
-    Made with ❤️ in London.
+    🥁 Bateria 🥁 by Francisco👨🏼‍💻
   </footer>
 </body>
 
