--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8">
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="./favicon.ico"> <!-- https://www.favicon.cc/=Puedo personal los favicon -->
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
