--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -6,7 +6,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Drum Kit</title>
+  <title>Bateria</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="./favicon.ico"> <!-- https://www.favicon.cc/=Puedo personal los favicon -->
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
@@ -14,7 +14,7 @@
 
 <body>
 
-  <h1 id="title">Drum 🥁 Kit</h1>
+  <h1 id="title">Bateria 🥁</h1>
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
