jQuery Attributes/Properties

--- a/j22_05_12-Query/index.html
+++ b/j22_05_12-Query/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
 
-    <h1>Hello</h1>
+    <h1 class="big-title margin-50">Hello.</h1> <!-- Asi le cambie las clases desde aqui -->
+    <img src="drum.png" alt="" srcset="">
+    <a href="https://www.google.com">Search</a>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
