jQuery DOM Manipulation

--- a/j22_05_12-Query/index.html
+++ b/j22_05_12-Query/index.html
@@ -14,13 +14,15 @@
 <body>
 
     <h1 class="big-title margin-50">Hello.</h1> <!-- Asi le cambie las clases desde aqui -->
-    <img src="drum.png" alt="" srcset="">
+    <!-- <img src="drum.png" alt="" srcset=""> No tengo imagen que mostrar -->
     <a href="https://www.google.com">Search</a>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
+
+    <input type="text">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./index.js"></script>
