--- a/22_05_16-Simon Game Challenge Starting Files/index.html
+++ b/22_05_16-Simon Game Challenge Starting Files/index.html
@@ -12,11 +12,10 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Presiona una Tecla para Iniciar</h1>
   <div class="container">
     <div lass="row">
       <div type="button" id="green" class="btn green"></div>
-
       <div type="button" id="red" class="btn red"></div>
     </div>
 
