--- a/22_05_16-Simon Game Challenge Starting Files/index.html
+++ b/22_05_16-Simon Game Challenge Starting Files/index.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8" />
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="./favicon.ico"> <!-- https://www.favicon.cc/=Puedo personal los favicon -->
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
 </head>
 
