Pasar la info del Html al app.js con Parse-Body

--- a/22_05_21-Weather Proyect/index.html
+++ b/22_05_21-Weather Proyect/index.html
@@ -8,13 +8,13 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Weather</title>
+     <title>WeatherApp</title>
  </head>
  <body>
-     <form action="/" method="post">
-         <label for="cityInput">City Name: </label>
-         <input type="text" name="cityName" id="cityInput">
-         <button type="submit">Go</button>
+     <form action="/" method="post"> <!-- Es un formulario, la action es el path y el metodo es como lo voy a mandar -->
+         <label for="cityInput">City Name: </label> <!-- Se muetra en pantalla como un texto estatico, recuerda para donde va ver el for -->
+         <input type="text" name="cityName" id="cityInput"> <!-- Campo donde ingreso texto, recuerda ingresarle el id -->
+         <button type="submit">Go</button> <!-- Solo es un boton que se preciona -->
     </form>
  </body>
  </html>
