--- a/25_07_17-Html/index.html
+++ b/25_07_17-Html/index.html
@@ -11,6 +11,7 @@
             <ol>2
                 <li>1</li>
                 <li><a href=""></a></li> <!-- Link -->
+                <li><img src="" alt="" srcset=""></li> <!-- Image with cource -->
             </ol>
         </li>
     </ul>
