--- a/25_07_17-Html/index(1).html
+++ b/25_07_17-Html/index(1).html
@@ -12,6 +12,8 @@
                 <li>1</li>
                 <li><a href=""></a></li> <!-- Link -->
                 <li><img src="" alt="" srcset=""></li> <!-- Image with cource -->
+                <h1></h1> <!-- Title -->
+                <h2></h2> <!-- Title -->
             </ol>
         </li>
     </ul>
