--- a/25_07_17-Html/index(1).html
+++ b/25_07_17-Html/index(1).html
@@ -14,6 +14,7 @@
                 <li><img src="" alt="" srcset=""></li> <!-- Image with cource -->
                 <h1></h1> <!-- Title -->
                 <h2></h2> <!-- Title -->
+                <p></p> <!-- Tags in HTML -->
             </ol>
         </li>
     </ul>
