--- a/25_07_17-Html/index(1).html
+++ b/25_07_17-Html/index(1).html
@@ -15,6 +15,7 @@
                 <h1></h1> <!-- Title -->
                 <h2></h2> <!-- Title -->
                 <p></p> <!-- Tags in HTML -->
+                <p></p> <!-- Github Pages -->
             </ol>
         </li>
     </ul>
