--- a/25_07_17-Html/index(1).html
+++ b/25_07_17-Html/index(1).html
@@ -16,6 +16,7 @@
                 <h2></h2> <!-- Title -->
                 <p></p> <!-- Tags in HTML -->
                 <p></p> <!-- Github Pages -->
+                <p></p> <!-- CSS Info -->
             </ol>
         </li>
     </ul>
