--- a/25_10-23-HackerRank_5/index.html
+++ b/25_10-23-HackerRank_5/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Plus Minus Challenge</title>
 </head>
-<body>
-    
+<body style="font-family: sans-serif; background-color: #f4f4f4; padding: 20px;">
+  <h2>Plus Minus Challenge (HackerRank Style)</h2>
+  <p>Abre la consola (F12) para ver los resultados.</p>
+
+  <script src="script.js"></script>
 </body>
-<script src="./script.js"></script>
 </html>
