--- a/25_10-23-HackerRank_5/index.html
+++ b/25_10-23-HackerRank_5/index.html
@@ -9,6 +9,6 @@
   <h2>Plus Minus Challenge (HackerRank Style)</h2>
   <p>Abre la consola (F12) para ver los resultados.</p>
 
-  <script src="script.js"></script>
+  <script src="script.js"></script> <!-- Vinculamos Script -->
 </body>
 </html>
